--- a/Lesson_18/index.html
+++ b/Lesson_18/index.html
@@ -9,7 +9,7 @@
     <title>News Grid</title>
 </head>
 <body>
-    
+    Yrazhapali
     <nav id="nav">
         <div class="container">
             <div class="nav__content">
